refactor: 优化数据库兼容性